--- a/src/BE/EMS.API/EmailTemplates/WelcomeEmail.html
+++ b/src/BE/EMS.API/EmailTemplates/WelcomeEmail.html
@@ -58,21 +58,41 @@
                                                 <table border="0" cellpadding="0" cellspacing="0" width="100%" class="tableDescription" style="">
                                                     <tbody>
                                                         <tr>
-                                                            <td style="padding-bottom: 20px;" align="center" valign="top" class="description">
-                                                                <p class="text" style="color:#666;font-family:'Open Sans',Helvetica,Arial,sans-serif;font-size:14px;font-weight:400;font-style:normal;letter-spacing:normal;line-height:22px;text-transform:none;text-align:center;padding:0;margin:0">Thanks for subscribe for the Vespro newsletter. Please click confirm button for subscription to start receiving our emails.</p>
-                                                            </td>
-                                                        </tr>
-                                                    </tbody>
-                                                </table>
-                                                <table border="0" cellpadding="0" cellspacing="0" width="100%" class="tableButton" style="">
-                                                    <tbody>
-                                                        <tr>
-                                                            <td style="padding-top:20px;padding-bottom:20px" align="center" valign="top">
-                                                                <table border="0" cellpadding="0" cellspacing="0" align="center">
+                                                            <td style="padding-left:20px;padding-right:20px" align="center" valign="top" class="containtTable ui-sortable">
+                                                                <table border="0" cellpadding="0" cellspacing="0" width="100%" class="tableDescription">
                                                                     <tbody>
                                                                         <tr>
-                                                                            <td style="background-color: rgb(0, 210, 244); padding: 12px 35px; border-radius: 50px;" align="center" class="ctaButton">
-                                                                                <a href="{{ConfirmationLink}}" style="color:#fff;font-family:Poppins,Helvetica,Arial,sans-serif;font-size:13px;font-weight:600;font-style:normal;letter-spacing:1px;line-height:20px;text-transform:uppercase;text-decoration:none;display:block" target="_blank" class="text">Confirm Email</a>
+                                                                            <td style="padding-bottom: 20px;" align="center" valign="top" class="description">
+                                                                                <p class="text" style="color:#666;font-family:'Open Sans',Helvetica,Arial,sans-serif;font-size:14px;font-weight:400;font-style:normal;letter-spacing:normal;line-height:22px;text-transform:none;text-align:center;padding:0;margin:0">
+                                                                                    Thanks for subscribing to the Vespro newsletter. Please click the confirm button below to start receiving our emails.
+                                                                                </p>
+                                                                            </td>
+                                                                        </tr>
+                                                                        <!-- Add Password Section -->
+                                                                        <tr>
+                                                                            <td style="padding-bottom: 20px;" align="center" valign="top" class="passwordSection">
+                                                                                <p class="text" style="color:#333;font-family:'Open Sans',Helvetica,Arial,sans-serif;font-size:16px;font-weight:600;font-style:normal;letter-spacing:normal;line-height:22px;text-transform:none;text-align:center;padding:0;margin:0">
+                                                                                    Your Password: <span style="color:#00d2f4;">{{Password}}</span>
+                                                                                </p>
+                                                                            </td>
+                                                                        </tr>
+                                                                    </tbody>
+                                                                </table>
+                                                                <table border="0" cellpadding="0" cellspacing="0" width="100%" class="tableButton">
+                                                                    <tbody>
+                                                                        <tr>
+                                                                            <td style="padding-top:20px;padding-bottom:20px" align="center" valign="top">
+                                                                                <table border="0" cellpadding="0" cellspacing="0" align="center">
+                                                                                    <tbody>
+                                                                                        <tr>
+                                                                                            <td style="background-color: rgb(0, 210, 244); padding: 12px 35px; border-radius: 50px;" align="center" class="ctaButton">
+                                                                                                <a href="{{ConfirmationLink}}" style="color:#fff;font-family:Poppins,Helvetica,Arial,sans-serif;font-size:13px;font-weight:600;font-style:normal;letter-spacing:1px;line-height:20px;text-transform:uppercase;text-decoration:none;display:block" target="_blank" class="text">
+                                                                                                    Confirm Email
+                                                                                                </a>
+                                                                                            </td>
+                                                                                        </tr>
+                                                                                    </tbody>
+                                                                                </table>
                                                                             </td>
                                                                         </tr>
                                                                     </tbody>
